crates/ruma-events/tests/it/ui/09-enum-invalid-kind.stderr
error: valid event kinds are GlobalAccountData, RoomAccountData, EphemeralRoom, MessageLike, State, ToDevice; found `NotReal`
 --> tests/it/ui/09-enum-invalid-kind.rs:4:10
  |
4 |     enum NotReal {
  |          ^^^^^^^
